--- a/resources/sass/forms.scss
+++ b/resources/sass/forms.scss
@@ -16,8 +16,8 @@
     height: 90px;
 }
 
-.drag-identificacion {
+/*.drag-identificacion {
     padding: 12px;
-}
+}*/
 
 .draggable-mirror { z-index: 99; }
